MODSOURMAN-1406: IllegalArgumentException for DI_INCOMING_MARC_BIB_RECORD_PARSED (#1026)
* MODSOURMAN-1406: BatchConsumerVerticle: IllegalArgumentException for DI_INCOMING_MARC_BIB_RECORD_PARSED

(cherry picked from commit 9476b7a9324d2aac4504a15b13d45c12edf2990e)